# rmcs-laser-guidance

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  README.md  package.xml  plan.md  todo.md  ugreen-visualcamera.sh
.github/workflows/: run-test.yml
apps/: hikcamera_preview.cpp  offline_smoke.cpp
config/: camera_calib.yaml  capture_red_20m.yaml  default.yaml
configs/: default.yaml
docs/: README.md  architecture.md  dataset_collection.md  development.md  future_rmcs_integration.md
examples/: camera_calibration.cpp  example_model_infer.cpp  example_support.hpp  model_infer.cpp
include/: config.hpp  pipeline.hpp  types.hpp
include/rmcs_laser_guidance/: config.hpp  pipeline.hpp  types.hpp
models/: README.md
src/: config.cpp  debug_renderer.cpp  detector.cpp  frame_format.cpp  model_adapter.cpp  model_infer.cpp  model_runtime.cpp  pipeline.cpp  replay.cpp  tensorrt_engine.cpp  v4l2_capture.cpp
src/internal/: debug_renderer.hpp  model_adapter.hpp  model_infer.hpp
test_data/sample_images/: manifest.csv
tests/: config_test.cpp  debug_renderer_test.cpp  detector_test.cpp  frame_format_test.cpp  freshness_queue_test.cpp  model_adapter_test.cpp  model_infer_test.cpp  pipeline_smoke_test.cpp  pipeline_test.cpp  sample_images_test.cpp  test_utils.hpp
