<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmcs_laser_guidance</name>
  <version>0.1.0</version>
  <description>Minimal laser guidance vision skeleton based on hikcamera.</description>
  <maintainer email="developer@example.com">developer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hikcamera</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

